--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
   </head>
   <body>
-    <div class="header-show">
+    <iframe src = "https://gbtestkey.rf.gd/" title="W3Schools Free Online Web Tutorials">
+    </iframe>
+   <!----- <div class="header-show">
       <div class="menu-barheader">รายการ</div>
       <div class="menu">
           <div class="menu-bar">ขึ้น</div>
@@ -26,7 +28,7 @@
     </div>
     <div class="foorter">
         <button class="submit" type="submit">ยืนยัน</button>
-    </div>
+    </div>---->
   </body>
   <script src="index.js"></script>
 </html>
